<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">应用猫</string>
    
    <!-- Tab标题 -->
    <string name="tab_title_promote">推荐</string>
    <string name="tab_title_search">搜索</string>
    <string name="tab_title_application">应用</string>
    <string name="tab_title_game">游戏</string>
    <string name="tab_title_manage">管理</string>
    
    <!-- 应用标签 -->
    <string name="label_title_hot">推荐</string>
    <string name="label_title_new">最新</string>
    <string name="label_title_first">首发</string>
    
    <!-- 评论界面 -->
    <string name="comment_word_empty">评论内容不能为空</string>
    <string name="comment_success">感谢您的反馈</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_rank_info">请评分后再提交</string>
    
    <!-- 详情界面子标题 -->
    <string name="tab_title_detail_detail">应用详情</string>
    <string name="tab_title_detail_comment">用户评价</string>
    
    <!-- 推荐界面子标题 -->
    <string name="tab_title_promote_hot">精品推荐</string>
    <string name="tab_title_promote_bibei">装机必备</string>
    <string name="tab_title_promote_biwan">必玩游戏</string>
    
    <!-- 搜索界面 -->
    <string name="search_hint">请输入应用名称或功能来查找</string>
    <string name="search_next_keywords">换一组</string>
    <string name="no_search_result_prefix">没有搜到\"</string>
    <string name="no_search_result_suffix">\"相关应用\n换一个关键词试试吧！</string>
    
    <!-- 应用界面子标题 -->
    <string name="tab_title_app_category">应用分类</string>
    <string name="tab_title_app_rank">应用热榜</string>
    <string name="tab_title_app_new_prod">新品应用</string>
    
    <!-- 游戏界面子标题 -->
    <string name="tab_title_game_category">游戏分类</string>
    <string name="tab_title_game_rank">游戏热榜</string>
    <string name="tab_title_game_new_prod">新品游戏</string>
    
    <!-- 管理界面子标题 -->
    <string name="tab_title_manage_update">应用更新</string>
    <string name="tab_title_manage_download">下载</string>
    <string name="tab_title_manage_local">应用卸载</string>
    <string name="tab_title_manage_settings">设置选项</string>
    
    <!-- 设置界面 -->
    <string name="feed_back">意见反馈</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    
    <!-- 首页热门推荐 -->
    <string name="app_group">应用合集</string>
    
    <!-- 分类列表 -->
    <string name="hot_category">热门分类</string>
    <string name="the_more_category">更多分类</string>
    
    <!-- 列表界面 -->
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="open">打开</string>
    <string name="update_time">%1$s</string>
    
    <!-- 分类详情 -->
    <string name="tab_title_hot">热榜</string>
    <string name="tab_title_new_product">新品</string>
    
    <!-- 本地应用管理 -->
    <string name="uninstall">卸载</string>
    <string name="cancel_download">取消下载</string>
    <string name="application_detail">应用详情</string>
    <string name="pausing">暂停中</string>
    <string name="download_failed">下载失败</string>
    <string name="pause">暂停</string>
    <string name="retry">重试</string>
    <string name="continue_down">继续</string>
    <string name="continue_download">继续下载</string>
    <string name="pause_download">暂停下载</string>
    <string name="install">安装</string>
    <string name="waiting">等待中</string>
    <string name="no_download_task_now">当前没有下载任务，建议去推荐下载</string>
    <string name="install_app">安装应用</string>
    <string name="delete_apk">删除安装包</string>
    <string name="delete_task">删除任务</string>
    <string name="delete_record">删除记录</string>
    <string name="download_file_not_exist_need_redownload">安装文件不存在，是否重新下载？</string>
    <string name="soft_used_space">占用空间：%1$s</string>
    <string name="install_time">安装日期：%1$s</string>
    <string name="installing">安装中</string>
    <string name="merge">合并中</string>
    
    <!-- 应用详情 -->
    <string name="app_detail">应用详情</string>
    <string name="app_detail_description">应用描述</string>
    <string name="app_detail_update_info">更新说明</string>
    <string name="app_detail_rank_info">星级评分</string>
    <string name="i_wanna_rank">我要评分</string>
    <string name="average_rank">平均分：%.1f分</string>
    <string name="already_ding_count">（%d人已评价）</string>
    <string name="open_software">打开</string>
    <string name="has_already_rank">您已评过分</string>
    <string name="app_detail_disclaimer">免责声明</string>
    <string name="rank_app_success">评分成功</string>
    <string name="rate_people">人</string>
    
    <!-- 专题详情 -->
    <string name="topic_detail">专题详情</string>
    
    <!-- 对话框 -->
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_commit">提交</string>
    <string name="dialog_continue">继续</string>
    <string name="dialog_uninstall">卸载</string>
    
    <!-- 分页列表 -->
    <string name="load_more_footer_text">正在努力加载&#8230;</string>
    <string name="load_end_footer_text">数据加载完毕</string>
    <string name="load_more_failed">加载失败，请上拉刷新</string>
    
    <!-- 应用更新 -->
    <string name="ignore_update">忽略更新</string>
    <string name="can_be_update">可更新的应用 (%1$d)</string>
    <string name="already_ignored">已忽略的升级 (%1$d)</string>
    <string name="local_version">%1$s</string>
    <string name="new_version">%1$s</string>
    <string name="cancel_ignore">取消忽略</string>
    <string name="no_update_now">当前没有可更新的应用</string>
    <string name="group_downloading">下载任务(%1$d)</string>
    <string name="group_downloaded">下载历史(%1$d)</string>
    <string name="update_description">更新说明:\n\n%1$s</string>
    <string name="update_description_empty">无更新说明</string>
    
    <!-- 各类提醒 -->
    <string name="ensure_exit">再按一次退出程序</string>
    
    <!-- 载入失败界面 -->
    <string name="click_to_refresh">点击刷新</string>
    <string name="click_button_refresh_later">点击按钮，请稍后刷新</string>
    <string name="network_not_good">网络不给力</string>
    <string name="network_not_connected">网络未连接</string>
    <string name="click_button_setting_network">点击按钮，设置您的网络</string>
    <string name="network_setting">网络设置</string>
    <string name="loading">正在载入&#8230;</string>
    
    <!-- 通知栏 -->
    <string name="app_is_downloading">%1$d款应用正在下载</string>
    <string name="app_down_success">%1$s下载完成</string>
    <string name="app_can_be_update">您有%1$d款应用可以更新</string>
    <string name="notification_labels_spilit">、</string>
    
    <!-- 下载任务Toast -->
    <string name="toast_already_added_to_download">%1$s已加入下载任务</string>
    <string name="toast_start_to_download">%1$s开始下载</string>
    <string name="toast_download_failed">%1$s下载失败</string>
    <string name="toast_download_success">%1$s下载完成</string>
    <string name="toast_download_installing">%1$s正在安装</string>
    <string name="toast_download_inst_success">%1$s已安装成功</string>
    <string name="click_to_install">点击安装软件</string>
    <string name="click_to_open">点击打开软件</string>
    
    <!-- 设置界面 -->
    <string name="app_setting">软件设置</string>
    <string name="auto_install">下载后提示安装</string>
    <string name="if_disabled_would_not_auto_install">下载完成自动弹出安装界面</string>
    <string name="root_install">Root用户快速安装</string>
    <string name="root_install_info">安装时不弹出安装界，直接安装</string>
    <string name="install_success_delete_apk">安装成功后自动删除安装包</string>
    <string name="delete_apk_info">安装文件路径：\nmnt/sdcard/appmall</string>
    <string name="auto_check_client_update">自动检查客户端升级</string>
    <string name="check_update">检测更新</string>
    <string name="clear_cache_now">正在清理&#8230;</string>
    <string name="clear_cache_completed">已删除下载记录和本地安装文件</string>
    <string name="about">关于</string>
    
    <!-- 反馈 -->
    <string name="upload_feedback">提交反馈</string>
    <string name="please_rank_my_app">产品服务质量评分</string>
    <string name="please_feedback">您有任何意见或建议请及时告诉我们，我们会不断改进产品与服务！</string>
    <string name="contact_address_options">QQ/手机号/Email（选填）</string>
    <string name="feedback_content_cannot_be_empty">提交内容不可为空</string>
    <string name="thanks_to_feedback">感谢您的反馈</string>
    
    <!-- 软件评分 -->
    <string name="rank_text_star_5">力荐</string>
    <string name="rank_text_star_4">推荐</string>
    <string name="rank_text_star_3">还行</string>
    <string name="rank_text_star_2">较差</string>
    <string name="rank_text_star_1">很差</string>
    
    <!-- 关于界面 -->
    <string name="client_version">版本：%1$s</string>
    <string name="check_for_new_version">检测新版本</string>
    <string name="copyright">Copyright@2014 UCWeb\nAll Rights Reserved</string>
    <string name="check_client_update_please_wait">正在获取新版本信息，请稍候&#8230;</string>
    <string name="your_client_version_is_the_newest">您当前的版本已经是最新的啦！</string>
    <string name="app_store_has_new_version">发现新版本！</string>
    <string name="show_update_next_time">下次再说</string>
    <string name="update_immediately">立即升级</string>
    <string name="update_dialog_message_formatter">最新版本：%1$s\n软件大小：%2$s\n更新内容：\n%3$s</string>
    
    <!-- 对话框相关 -->
    <string name="dialog_title">下载提示</string>
    <string name="dialog_network_tip">您目前下载的安装包超过了20M，检测到您当前处于2/3G网络，建议您打开无线网络。</string>
    <string name="dialog_enter_network_setting">进入网络设置</string>
    <string name="has_task_downloading">%1$d个任务正在下载，确认退出？</string>
    <string name="continue_downloading_in_background">继续未完成的下载并安装</string>
    <string name="dialog_space_not_enough">手机内存不足，下载失败。\n请释放一些存储空间后重试。</string>
    <string name="dialog_enter_app_manage_setting">进入应用程序管理</string>
    
    <!-- 其他-->
    <string name="enter_to_promote">进入推荐</string>
    <string name="manage_download_title">下载管理</string>
    <string name="update_app_notification_text">%d款应用可更新</string>
    <string name="update_app_notification_text_addsavesize">%d款应用可更新，立省</string>
    <string name="upgrade_notification_title">应用猫有新版可以升级</string>
    <string name="comment_edittext_hint_text">请您文明上网、理性发言并遵守相关法律法规(最多评论200字)</string>
    <string name="comment_repeate">您已评过分</string>
    <string name="one_key_clean">清空记录</string>
    <string name="not_notify_text">不再提示</string>
    <string name="root_install_fail">安装失败，请重新安装</string>
    <string name="delete_all_record_title">确认清空记录?</string>
    <string name="delete_all_record_content">删除所有下载记录和本地安装文件</string>
    <string name="delete_record_title">确认删除记录?</string>
    <string name="delete_record_content">删除该条下载记录和本地安装文件</string>
    <string name="update_refresh_error">更新请求失败，请下拉刷新</string>
    <string name="update_refresh_success">刷新成功</string>
    <string name="root_fail_text">无法获取root权限</string>
    <string name="click_star_text">点击星星评分</string>
    
    
    <string name="signature_diff_title">温馨提示</string>
    <string name="signature_diff_content">新版与您手机的老版签名不一致，是否继续更新？</string>
    <string name="signature_diff_install_content">新版与您手机的老版签名不一致，需要卸载后才能安装（卸载应用会导致应用数据或游戏存档丢失）</string>
    
    <string name="ptr_pull_up_to_refresh">上拉刷新</string>
    <string name="ptr_pull_to_refresh">下拉刷新</string>
    <string name="ptr_release_to_refresh">释放更新</string>
    <string name="ptr_refreshing">正在努力加载</string>
    
    <string name="important_update">有重大更新</string>
    <string name="update_feature">新版特性</string>
    
    <string name="search_not_find">没有搜索到相关内容,建议尝试搜索其他关键词</string>
    <string name="search_button_text">搜索</string>
    <string name="search_recommend_title">以下应用您可能喜欢</string>
    
    <string name="settings_tip_install">安装设置</string>
    <string name="settings_tip_about">其他</string>
    
    <string-array name="search_colors">
        <item>#ffa500</item>
        <item>#3fc6c6</item>
        <item>#f5aab9</item>
        <item>#f09578</item>
        <item>#91c849</item>
        <item>#43c7ee</item>
        <item>#f15b78</item>
        <item>#f68620</item>
        <item>#ac86db</item>
        <item>#43c7ee</item>
        <item>#f68620</item>
        <item>#43c7ee</item>
        <item>#00CED1</item>
        <item>#878787</item>
    </string-array>
    
</resources>
